# openinterview

./: .replit  ALL_BUNDLES_COMPLETE.md  AVAILABILITY_LINK_RESTORED.md  AVAILABILITY_RESTORED_SUMMARY.md  AVATAR_FIX_SUMMARY.md  AVATAR_SYNC_FIX.md  AVATAR_SYNC_SUMMARY.md  BUNDLES_COMPLETE.md  BUNDLE_A_COMPLETE.md  BUNDLE_A_INTEGRATION.md  BUNDLE_A_PATCH_README.md  BUNDLE_A_SUMMARY.md  BUNDLE_B_INTEGRATION.md  BUNDLE_B_SUMMARY.md  BUNDLE_C_INTEGRATION.md  BUNDLE_C_SUMMARY.md  CAL_INTEGRATION_README.md  CDN_REMOVAL_DEPLOYMENT_GUIDE.md  CRITICAL_SYNC_DEPLOYMENT_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DRAG_DROP_PATCH_ANALYSIS.md  DUPLICATE_ATTACHMENTS_FIX.md  DUPLICATE_AVATAR_FIX.md  DUPLICATE_LINKS_FINAL_FIX.md  DUPLICATE_LINKS_FIX.md  EDIT_BUTTON_ROUTING_PROBLEM.txt  EMAIL_PATCH_ANALYSIS.md  EMAIL_PATCH_V2_ANALYSIS.md  ENHANCED_EDITOR_DEPLOYMENT_STATUS.md  ENHANCED_EDITOR_DEPLOYMENT_SUMMARY.md  ENHANCED_EDITOR_V2_UPDATE.md  ESM_GUARDRAILS_ANALYSIS.md  ESM_IMPLEMENTATION_SUMMARY.md  FILE_UPLOAD_FIX.md  GITHUB_ACTIONS_SETUP.md  GUARDRAILS.md  GUARDRAILS_FINAL_STATUS.md  GUARDRAILS_INTEGRATION.md  HEADER_SPACING_FIX.md  HOME_UAT_PATCH.md  (+60 more)
adapters/: index.ts
attached_assets/: .env_1759234582984.example  .env_1759453641247.example  .env_1759457127332.example  0001-match-publish-button-style_1761243304404.patch  20251020_assets_profiles_1760960557405.sql  AdminConsoleMock_1759458135378.jsx  AdminConsole_1759404995152.jsx  CHANGELOG_1760809841457.md  CHANGELOG_1760893297379.md  CHANGELOG_1760957083075.md  CHECKLIST_1759587111703.md  CONFIG_NOTES_1761404597046.md  (+798 more)
auth_pack/: run.py  (+4 more)
(+553 files in other folders)
