[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "email-validator>=2.3.0",
    "fastapi==0.115.0",
    "itsdangerous>=2.2.0",
    "pillow>=11.3.0",
    "playwright>=1.55.0",
    "pydantic==2.8.2",
    "python-dotenv==1.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sqlalchemy==2.0.32",
    "uvicorn==0.30.6",
]
